Finish by adding custom spinner, adding back onCalculateFunction for button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_marginTop="68dp"
         android:text="Total"
         android:enabled="false"
-        android:onClick="calculateTotal"
+        android:onClick="onCalculateTotal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
